# calibre-kobo-driver

./: .all-contributorsrc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .vale.ini  .yamllint.yaml  CONTRIBUTORS  CONTRIBUTORS.md  Makefile  README.md  __builtins__.pyi  __init__.py  common.py  container.py  conversion_in_init.py  conversion_init.py  conversion_out_init.py  create-plugin.ps1  create-plugin.sh  device_init.py  driver.py  generate-pot.ps1  generate-pot.sh  hyphenator.py  md_reader_init.py  md_writer_init.py  pygettext.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml  translations.yml
.vale-styles/Joblint/: Acronyms.yml
.vale-styles/Microsoft/: Backend.yml  (+3 more)
conversion/: __init__.py  config.py  input_config.py  input_init.py  kepub_input.py  kepub_output.py  output_config.py  output_init.py
css/: hyphenation.css  hyphenation.css.tmpl  no-hyphens.css  style-hacks.css
device/: __init__.py  driver.py  koboextended_config.py
metadata/: __init__.py  reader.py  writer.py
scripts/: build.sh  push_translations.py  update-calibre.py
sql/: BlockAnalyticsEvents.sql  DismissAwardTiles.sql  DismissNewBookTiles.sql
tests/: assertions.py  test_common.py  test_container.py  test_device.py
translations/: de.mo  de.po  en.po  en_CA.mo  en_CA.po  en_US.po  es.mo  es.po  fr.mo  fr.po  it.po  messages.pot  nl.mo  nl.po  pt.mo  pt.po  pt_BR.mo  pt_BR.po
(+15 files in other folders)
